viewer/bridge/tidyvnc.h

typedef struct { const uint8_t* data; uint64_t length; } tidyvnc_bytes;
typedef struct {
  uint32_t size, version, action, count, operand_argument, reserved;
  tidyvnc_bytes operand;
} tidyvnc_invocation_info;
typedef struct {
  uint32_t size, version, category, argument, value_argument, reserved;
  char name[64];
  tidyvnc_bytes value;
} tidyvnc_invocation_assignment;
typedef struct {
  uint32_t size, version, category, boolean, available, reserved;
  char name[64], alias[64];
} tidyvnc_invocation_option;
typedef struct { uint32_t size, version, count, legacy_header; } tidyvnc_document_info;
typedef struct {
  uint32_t size, version, line, reserved;
  char name[255], value[256]; /* Copied NUL-terminated bytes, not necessarily UTF-8. */
} tidyvnc_document_entry;
typedef struct { tidyvnc_bytes name, value; } tidyvnc_document_assignment;
typedef struct {
  uint32_t size, version, shared, editable;
  uint64_t revision, generation;
} tidyvnc_sharing;
typedef struct {
  uint32_t size, version, editable, reserved;
  uint64_t revision, generation;
  uint32_t tls_priority_length, ca_file_length, crl_file_length, reserved2;
  char types[1025]; /* NUL terminated. Following arrays use lengths (max 4096). */
  char tls_priority[4096], ca_file[4096], crl_file[4096];
} tidyvnc_security_configuration;
typedef struct {
  uint32_t size, version;
  tidyvnc_bytes types, tls_priority, ca_file, crl_file;
} tidyvnc_security_update;
typedef struct { uint8_t* data; uint64_t length; } tidyvnc_mutable_bytes;
typedef struct {
  uint32_t size, version, transport, port;
  tidyvnc_bytes host, scope, path, route;
} tidyvnc_endpoint_info;
typedef struct {
  uint32_t size, version, type, available, protection, credentials, aes_bits, reserved;
  char name[32]; /* Canonical RFB SecurityTypes token. */
} tidyvnc_security_choice;
typedef struct {
  uint32_t size, version, count, reserved;
  uint32_t types[32];
  char canonical[1025]; /* Empty selection denies all; not inherited defaults. */
} tidyvnc_security_selection;
typedef struct { tidyvnc_bytes name, value; } tidyvnc_encoding_assignment;
typedef struct {
  uint32_t size, version, id, type;
  int32_t minimum, maximum;
  uint32_t persistent, live;
  char name[32], alias[32], default_value[32]; /* Copied, NUL-terminated UTF-8. */
} tidyvnc_encoding_schema;
typedef struct {
  uint32_t size, version, available;
  int32_t wire_encoding;
  char name[32];
} tidyvnc_encoding_choice;
typedef struct {
  uint32_t size, version, id, source;
  char value[32]; /* Canonical value from the shared core validator. */
} tidyvnc_encoding_value;
typedef struct {
  uint32_t size, version, code, domain;
  uint32_t detail; int32_t native_error;
  char message[160]; /* Fixed diagnostic text; never copies endpoints or secrets. */
} tidyvnc_error;
typedef struct {
  uint32_t size, version;
  uint64_t features;
  uint32_t handle_capacity, runtime_capacity, security_count, reserved;
  uint32_t security_types[32]; /* RFB wire security IDs compiled into this build. */
} tidyvnc_abi_info;
typedef struct {
  uint32_t size, version, session_capacity, reserved;
  uint64_t required_features;
} tidyvnc_runtime_options;
typedef struct {
  uint32_t size, version, port, ipv4, ipv6, backlog, pending_capacity,
           event_capacity, pending_timeout_ms, reserved;
  tidyvnc_bytes address; /* Empty wildcard, or numeric IPv4/IPv6; copied. */
} tidyvnc_listener_options;
typedef struct {
  char host[64]; /* Copied numeric host, including any numeric IPv6 scope. */
  uint32_t port, reserved;
} tidyvnc_listener_address;
typedef struct {
  uint32_t size, version, state, error;
  int32_t native_error;
  uint32_t pending, address_count, reserved;
  tidyvnc_listener_address addresses[2];
} tidyvnc_listener_snapshot;
enum { TIDYVNC_END_NONE = 0, TIDYVNC_END_CANCELLED = 1, TIDYVNC_END_PEER_CLOSED = 2,
       TIDYVNC_END_PROMPT_TIMEOUT = 3, TIDYVNC_END_AUTH_REJECTED = 4,
       TIDYVNC_END_TRANSPORT = 5, TIDYVNC_END_PROTOCOL = 6,
       TIDYVNC_END_RESOURCE = 7, TIDYVNC_END_INTERNAL = 8,
       TIDYVNC_END_EVENT_OVERFLOW = 9, TIDYVNC_END_RESOLUTION = 10,
       TIDYVNC_END_CONNECTION = 11, TIDYVNC_END_RESOLUTION_TIMEOUT = 12,
       TIDYVNC_END_CONNECTION_TIMEOUT = 13, TIDYVNC_END_UNSUPPORTED_ENDPOINT = 14,
       TIDYVNC_END_INVALID_ENDPOINT = 15 };
enum { TIDYVNC_EVENT_SNAPSHOT = 0, TIDYVNC_EVENT_STATE = 1,
       TIDYVNC_EVENT_DESKTOP = 2, TIDYVNC_EVENT_BELL = 3,
       TIDYVNC_EVENT_STATISTICS = 4, TIDYVNC_EVENT_COMPLETION = 5,
       TIDYVNC_EVENT_OVERFLOW = 6 };
enum { TIDYVNC_OPERATION_SUCCEEDED = 0, TIDYVNC_OPERATION_CANCELLED = 1,
       TIDYVNC_OPERATION_FAILED = 2 };
enum { TIDYVNC_OPERATION_FAILURE_NONE = 0, TIDYVNC_OPERATION_TIMED_OUT = 1,
       TIDYVNC_OPERATION_SERVER_REJECTED = 2 };
enum { TIDYVNC_PIXEL_BGRA8 = 1, TIDYVNC_PIXEL_RGBA8 = 2 };
enum { TIDYVNC_ALPHA_OPAQUE = 1, TIDYVNC_ALPHA_STRAIGHT = 2, TIDYVNC_ALPHA_PREMULTIPLIED = 3 };
enum { TIDYVNC_ORIGIN_TOP_LEFT = 1 };
enum { TIDYVNC_PROMPT_CREDENTIALS = 1, TIDYVNC_PROMPT_CERTIFICATE = 2, TIDYVNC_PROMPT_HOST_KEY = 3 };
/* Portable presentation reasons. These are not the TLS status bit values. */
enum {
  TIDYVNC_CERT_INVALID = 1, TIDYVNC_CERT_REVOKED = 2, TIDYVNC_CERT_UNKNOWN_ISSUER = 4,
  TIDYVNC_CERT_SIGNER_NOT_CA = 8, TIDYVNC_CERT_WEAK_ALGORITHM = 16,
  TIDYVNC_CERT_NOT_YET_VALID = 32, TIDYVNC_CERT_EXPIRED = 64, TIDYVNC_CERT_BAD_SIGNATURE = 128,
  TIDYVNC_CERT_OLD_REVOCATION_DATA = 256, TIDYVNC_CERT_WRONG_OWNER = 512,
  TIDYVNC_CERT_FUTURE_REVOCATION_DATA = 1024, TIDYVNC_CERT_SIGNER_CONSTRAINTS = 2048,
  TIDYVNC_CERT_MISMATCH = 4096, TIDYVNC_CERT_WRONG_PURPOSE = 8192,
  TIDYVNC_CERT_MISSING_OCSP = 16384, TIDYVNC_CERT_INVALID_OCSP = 32768,
  TIDYVNC_CERT_CRITICAL_EXTENSION = 65536, TIDYVNC_CERT_UNKNOWN_PROBLEM = 131072,
  TIDYVNC_CERT_MISSING_PROBLEM = 262144
};
/* Copied shared-parser result. x/y are hundredths of a percent, or exact
 * dimensions for EXACT. canonical is NUL-terminated; 100% canonicalizes to
 * UNSCALED. Fit modes ignore the explicit-size units selection. */
enum { TIDYVNC_SCALING_UNSCALED = 0, TIDYVNC_SCALING_AUTO = 1,
       TIDYVNC_SCALING_FIXED_RATIO = 2, TIDYVNC_SCALING_FIT_WIDTH = 3,
       TIDYVNC_SCALING_FIT_HEIGHT = 4, TIDYVNC_SCALING_EXACT = 5,
       TIDYVNC_SCALING_PERCENT = 6, TIDYVNC_SCALING_INDEPENDENT = 7 };
/* Desktop filter IDs map to the shared CPU algorithms. */
enum { TIDYVNC_FILTER_NEAREST = 0, TIDYVNC_FILTER_BILINEAR = 1, TIDYVNC_FILTER_AREA = 2 };
enum { TIDYVNC_CLIPBOARD_OFFERED = 1, TIDYVNC_CLIPBOARD_TEXT = 2,
       TIDYVNC_CLIPBOARD_UNAVAILABLE = 3, TIDYVNC_CLIPBOARD_INVALIDATED = 4,
       TIDYVNC_CLIPBOARD_REJECTED = 5 };
/* NATIVE_ERROR_CATEGORY: what a native_error from a snapshot, listener or
 * error value means, independent of the platform that produced it. Native
 * codes are platform values: errno on macOS/Linux, Winsock/Win32 codes on
 * Windows; never compare them across platforms, compare the category. */
enum { TIDYVNC_NATIVE_ERROR_OTHER = 0, TIDYVNC_NATIVE_ERROR_NETWORK_POLICY = 1,
       TIDYVNC_NATIVE_ERROR_REFUSED = 2, TIDYVNC_NATIVE_ERROR_ROUTING = 3,
       TIDYVNC_NATIVE_ERROR_TIMED_OUT = 4 };
/* IDENTITY_DIGEST: versioned SHA-256 identities that name saved credentials,
 * trust entries and SSH routes, byte-identical to the macOS frontend. Not a
 * secret, never proof of trust or permission to send credentials, and no
 * endpoint, route or user text is recoverable from it. Stateless, thread safe,
 * no IO. Inputs by kind:
 *   CREDENTIAL      endpoint, route, allow_unix_sockets, security_type (the
 *                   negotiated method), shape, username (password-only: empty)
 *   TRUST_*         endpoint (non-empty; Unix sockets allowed), route
 *   SSH_ROUTE/_INTENT  endpoint = the requested gateway text ("via")
 *   SSH_RESOLVED    endpoint = resolved host name, username, port, and
 *                   host_key_alias (empty = none) from `ssh -G`
 * Text is at most 4096 bytes of UTF-8 without NUL. Output is untouched on
 * failure; errors use DOMAIN_IDENTITY with the reason as detail. */
enum { TIDYVNC_IDENTITY_CREDENTIAL = 1, TIDYVNC_IDENTITY_TRUST_CERTIFICATE = 2,
       TIDYVNC_IDENTITY_TRUST_HOST_KEY = 3, TIDYVNC_IDENTITY_SSH_ROUTE = 4,
       TIDYVNC_IDENTITY_SSH_INTENT = 5, TIDYVNC_IDENTITY_SSH_RESOLVED = 6 };
enum { TIDYVNC_IDENTITY_PASSWORD_ONLY = 1, TIDYVNC_IDENTITY_USERNAME_PASSWORD = 2 };
enum { TIDYVNC_IDENTITY_TOO_LONG = 1, TIDYVNC_IDENTITY_INVALID_TEXT = 2,
       TIDYVNC_IDENTITY_INVALID_ENDPOINT = 3, TIDYVNC_IDENTITY_INVALID_AUTHENTICATION = 4,
       TIDYVNC_IDENTITY_UNEXPECTED_USERNAME = 5, TIDYVNC_IDENTITY_INVALID_GATEWAY = 6,
       TIDYVNC_IDENTITY_INVALID_ALIAS = 7, TIDYVNC_IDENTITY_INVALID_KIND = 8 };
/* SSH gateway ("via") grammar: [user@]host or ssh://[user@]host[:port], at most
 * 4096 bytes. Pure validation and canonicalization; nothing is resolved or run.
 * host/scope are the endpoint name and IPv6 zone; user is present only with
 * TIDYVNC_SSH_GATEWAY_USER. Borrowed bytes remain valid while the handle lives. */
enum { TIDYVNC_SSH_GATEWAY_USER = 1, TIDYVNC_SSH_GATEWAY_EXPLICIT_PORT = 2 };
/* Initial remote desktop size (DesktopSize). LEGACY is the retained command-line
 * "%dx%d" form (C whitespace/'+' before each number, trailing text ignored);
 * STRICT is exactly decimal WxH of at most 32 bytes, for settings and profiles.
 * Empty text yields width = height = 0. Dimensions are 1..65535. Invalid text,
 * syntax or NUL leaves output unchanged. Pure and stateless. */
enum { TIDYVNC_DESKTOP_SIZE_LEGACY = 1, TIDYVNC_DESKTOP_SIZE_STRICT = 2 };
/* Shared shortcut classifier, independent of a session. One handle per input
 * surface. Operations serialize on that handle; there are no timers/callbacks.
 * Bits: Control=1, Shift=2, Alt/Option=4, Super/Command=8; zero disables shortcuts.
 * Hosts reset on focus/routing/disconnect and release held remote keys before
 * changing modifiers, or when acting on SHORTCUT / UNARM. The host owns command
 * dispatch and temporary Space bypass. This service sends no protocol input.
 * At most 1024 distinct pressed physical IDs; overflow leaves state/output
 * unchanged. Repeats of existing IDs do not consume capacity. Release ignores
 * keysym. Reset discards pressed state and keeps selected modifiers. */
enum { TIDYVNC_SHORTCUT_NORMAL = 0, TIDYVNC_SHORTCUT_UNARM = 1,
       TIDYVNC_SHORTCUT_ACTION = 2, TIDYVNC_SHORTCUT_IGNORE = 3 };