platform/windows/TidyVNC.Native/Bridge/Interop.g.cs

    public const uint TIDYVNC_END_TRANSPORT = 5U;
    public const uint TIDYVNC_END_PROTOCOL = 6U;
    public const uint TIDYVNC_END_RESOURCE = 7U;
    public const uint TIDYVNC_END_INTERNAL = 8U;
    public const uint TIDYVNC_END_EVENT_OVERFLOW = 9U;
    public const uint TIDYVNC_END_RESOLUTION = 10U;
    public const uint TIDYVNC_END_CONNECTION = 11U;
    public const uint TIDYVNC_END_RESOLUTION_TIMEOUT = 12U;
    public const uint TIDYVNC_END_CONNECTION_TIMEOUT = 13U;
    public const uint TIDYVNC_END_UNSUPPORTED_ENDPOINT = 14U;
    public const uint TIDYVNC_END_INVALID_ENDPOINT = 15U;
    public const uint TIDYVNC_EVENT_SNAPSHOT = 0U;
    public const uint TIDYVNC_EVENT_STATE = 1U;
    public const uint TIDYVNC_EVENT_DESKTOP = 2U;
    public const uint TIDYVNC_EVENT_BELL = 3U;
    public const uint TIDYVNC_EVENT_STATISTICS = 4U;
    public const uint TIDYVNC_EVENT_COMPLETION = 5U;
    public const uint TIDYVNC_EVENT_OVERFLOW = 6U;
    public const uint TIDYVNC_OPERATION_SUCCEEDED = 0U;
    public const uint TIDYVNC_OPERATION_CANCELLED = 1U;
    public const uint TIDYVNC_OPERATION_FAILED = 2U;
    public const uint TIDYVNC_OPERATION_FAILURE_NONE = 0U;
    public const uint TIDYVNC_OPERATION_TIMED_OUT = 1U;
    public const uint TIDYVNC_OPERATION_SERVER_REJECTED = 2U;
    public const uint TIDYVNC_PIXEL_BGRA8 = 1U;
    public const uint TIDYVNC_PIXEL_RGBA8 = 2U;
    public const uint TIDYVNC_ALPHA_OPAQUE = 1U;
    public const uint TIDYVNC_ALPHA_STRAIGHT = 2U;
    public const uint TIDYVNC_ALPHA_PREMULTIPLIED = 3U;
    public const uint TIDYVNC_ORIGIN_TOP_LEFT = 1U;
    public const uint TIDYVNC_PROMPT_CREDENTIALS = 1U;
    public const uint TIDYVNC_PROMPT_CERTIFICATE = 2U;
    public const uint TIDYVNC_PROMPT_HOST_KEY = 3U;
    public const uint TIDYVNC_CERT_INVALID = 1U;
    public const uint TIDYVNC_CERT_REVOKED = 2U;
    public const uint TIDYVNC_CERT_UNKNOWN_ISSUER = 4U;
    public const uint TIDYVNC_CERT_SIGNER_NOT_CA = 8U;
    public const uint TIDYVNC_CERT_WEAK_ALGORITHM = 16U;
    public const uint TIDYVNC_CERT_NOT_YET_VALID = 32U;
    public const uint TIDYVNC_CERT_EXPIRED = 64U;
    public const uint TIDYVNC_CERT_BAD_SIGNATURE = 128U;
    public const uint TIDYVNC_CERT_OLD_REVOCATION_DATA = 256U;
    public const uint TIDYVNC_CERT_WRONG_OWNER = 512U;
    public const uint TIDYVNC_CERT_FUTURE_REVOCATION_DATA = 1024U;
    public const uint TIDYVNC_CERT_SIGNER_CONSTRAINTS = 2048U;
    public const uint TIDYVNC_CERT_MISMATCH = 4096U;
    public const uint TIDYVNC_CERT_WRONG_PURPOSE = 8192U;
    public const uint TIDYVNC_CERT_MISSING_OCSP = 16384U;
    public const uint TIDYVNC_CERT_INVALID_OCSP = 32768U;
    public const uint TIDYVNC_CERT_CRITICAL_EXTENSION = 65536U;
    public const uint TIDYVNC_CERT_UNKNOWN_PROBLEM = 131072U;
    public const uint TIDYVNC_CERT_MISSING_PROBLEM = 262144U;
    public const uint TIDYVNC_SCALING_UNSCALED = 0U;
    public const uint TIDYVNC_SCALING_AUTO = 1U;
    public const uint TIDYVNC_SCALING_FIXED_RATIO = 2U;
    public const uint TIDYVNC_SCALING_FIT_WIDTH = 3U;
    public const uint TIDYVNC_SCALING_FIT_HEIGHT = 4U;
    public const uint TIDYVNC_SCALING_EXACT = 5U;
    public const uint TIDYVNC_SCALING_PERCENT = 6U;
    public const uint TIDYVNC_SCALING_INDEPENDENT = 7U;
    public const uint TIDYVNC_FILTER_NEAREST = 0U;
    public const uint TIDYVNC_FILTER_BILINEAR = 1U;
    public const uint TIDYVNC_FILTER_AREA = 2U;
    public const uint TIDYVNC_CLIPBOARD_OFFERED = 1U;
    public const uint TIDYVNC_CLIPBOARD_TEXT = 2U;
    public const uint TIDYVNC_CLIPBOARD_UNAVAILABLE = 3U;
    public const uint TIDYVNC_CLIPBOARD_INVALIDATED = 4U;
    public const uint TIDYVNC_CLIPBOARD_REJECTED = 5U;
    public const uint TIDYVNC_NATIVE_ERROR_OTHER = 0U;
    public const uint TIDYVNC_NATIVE_ERROR_NETWORK_POLICY = 1U;
    public const uint TIDYVNC_NATIVE_ERROR_REFUSED = 2U;
    public const uint TIDYVNC_NATIVE_ERROR_ROUTING = 3U;
    public const uint TIDYVNC_NATIVE_ERROR_TIMED_OUT = 4U;
    public const uint TIDYVNC_IDENTITY_CREDENTIAL = 1U;
    public const uint TIDYVNC_IDENTITY_TRUST_CERTIFICATE = 2U;
    public const uint TIDYVNC_IDENTITY_TRUST_HOST_KEY = 3U;
    public const uint TIDYVNC_IDENTITY_SSH_ROUTE = 4U;
    public const uint TIDYVNC_IDENTITY_SSH_INTENT = 5U;
    public const uint TIDYVNC_IDENTITY_SSH_RESOLVED = 6U;
    public const uint TIDYVNC_IDENTITY_PASSWORD_ONLY = 1U;
    public const uint TIDYVNC_IDENTITY_USERNAME_PASSWORD = 2U;
    public const uint TIDYVNC_IDENTITY_TOO_LONG = 1U;
    public const uint TIDYVNC_IDENTITY_INVALID_TEXT = 2U;
    public const uint TIDYVNC_IDENTITY_INVALID_ENDPOINT = 3U;
    public const uint TIDYVNC_IDENTITY_INVALID_AUTHENTICATION = 4U;
    public const uint TIDYVNC_IDENTITY_UNEXPECTED_USERNAME = 5U;
    public const uint TIDYVNC_IDENTITY_INVALID_GATEWAY = 6U;
    public const uint TIDYVNC_IDENTITY_INVALID_ALIAS = 7U;
    public const uint TIDYVNC_IDENTITY_INVALID_KIND = 8U;
    public const uint TIDYVNC_SSH_GATEWAY_USER = 1U;
    public const uint TIDYVNC_SSH_GATEWAY_EXPLICIT_PORT = 2U;
    public const uint TIDYVNC_DESKTOP_SIZE_LEGACY = 1U;
    public const uint TIDYVNC_DESKTOP_SIZE_STRICT = 2U;
    public const uint TIDYVNC_SHORTCUT_NORMAL = 0U;
    public const uint TIDYVNC_SHORTCUT_UNARM = 1U;
    public const uint TIDYVNC_SHORTCUT_ACTION = 2U;
    public const uint TIDYVNC_SHORTCUT_IGNORE = 3U;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_bytes
{
    public byte* data;
    public ulong length;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_invocation_info
{
    public uint size;
    public uint version;
    public uint action;
    public uint count;
    public uint operand_argument;
    public uint reserved;
    public tidyvnc_bytes operand;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_invocation_assignment
{
    public uint size;
    public uint version;
    public uint category;
    public uint argument;
    public uint value_argument;
    public uint reserved;
    public fixed byte name[64];
    public tidyvnc_bytes value;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_invocation_option
{
    public uint size;
    public uint version;
    public uint category;
    public uint boolean;
    public uint available;
    public uint reserved;
    public fixed byte name[64];
    public fixed byte alias[64];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_document_info
{
    public uint size;
    public uint version;
    public uint count;
    public uint legacy_header;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_document_entry
{
    public uint size;
    public uint version;
    public uint line;
    public uint reserved;
    public fixed byte name[255];
    public fixed byte value[256];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_document_assignment
{
    public tidyvnc_bytes name;
    public tidyvnc_bytes value;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_sharing
{
    public uint size;
    public uint version;
    public uint shared;
    public uint editable;
    public ulong revision;
    public ulong generation;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_security_configuration
{
    public uint size;
    public uint version;
    public uint editable;
    public uint reserved;
    public ulong revision;
    public ulong generation;
    public uint tls_priority_length;
    public uint ca_file_length;
    public uint crl_file_length;
    public uint reserved2;
    public fixed byte types[1025];
    public fixed byte tls_priority[4096];
    public fixed byte ca_file[4096];
    public fixed byte crl_file[4096];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_security_update
{
    public uint size;
    public uint version;
    public tidyvnc_bytes types;
    public tidyvnc_bytes tls_priority;
    public tidyvnc_bytes ca_file;
    public tidyvnc_bytes crl_file;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_mutable_bytes
{
    public byte* data;
    public ulong length;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_endpoint_info
{
    public uint size;
    public uint version;
    public uint transport;
    public uint port;
    public tidyvnc_bytes host;
    public tidyvnc_bytes scope;
    public tidyvnc_bytes path;
    public tidyvnc_bytes route;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_security_choice
{
    public uint size;
    public uint version;
    public uint type;
    public uint available;
    public uint protection;
    public uint credentials;
    public uint aes_bits;
    public uint reserved;
    public fixed byte name[32];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_security_selection
{
    public uint size;
    public uint version;
    public uint count;
    public uint reserved;
    public fixed uint types[32];
    public fixed byte canonical[1025];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_encoding_assignment
{
    public tidyvnc_bytes name;
    public tidyvnc_bytes value;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_encoding_schema
{
    public uint size;
    public uint version;
    public uint id;
    public uint type;
    public int minimum;
    public int maximum;
    public uint persistent;
    public uint live;
    public fixed byte name[32];
    public fixed byte alias[32];
    public fixed byte default_value[32];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_encoding_choice
{
    public uint size;
    public uint version;
    public uint available;
    public int wire_encoding;
    public fixed byte name[32];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_encoding_value
{
    public uint size;
    public uint version;
    public uint id;
    public uint source;
    public fixed byte value[32];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_error
{
    public uint size;
    public uint version;
    public uint code;
    public uint domain;
    public uint detail;
    public int native_error;
    public fixed byte message[160];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_abi_info
{
    public uint size;
    public uint version;
    public ulong features;
    public uint handle_capacity;
    public uint runtime_capacity;
    public uint security_count;
    public uint reserved;
    public fixed uint security_types[32];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_runtime_options
{
    public uint size;
    public uint version;
    public uint session_capacity;
    public uint reserved;
    public ulong required_features;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_listener_options
{
    public uint size;
    public uint version;
    public uint port;
    public uint ipv4;
    public uint ipv6;
    public uint backlog;
    public uint pending_capacity;
    public uint event_capacity;
    public uint pending_timeout_ms;
    public uint reserved;
    public tidyvnc_bytes address;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_listener_address
{
    public fixed byte host[64];
    public uint port;
    public uint reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_listener_snapshot
{
    public uint size;
    public uint version;
    public uint state;
    public uint error;
    public int native_error;
    public uint pending;
    public uint address_count;
    public uint reserved;
    public tidyvnc_listener_address_Array2 addresses;
}
